# NMPC

./: .gitignore  404.html  CMakeLists.txt  README.md  analyze_stress_results.py  carla_route_inspector.py  index.html  mkdocs.yml  nmpc_carla_runner.py  nmpc_core_planner.py  nmpc_stress_test.py  reference_generator.py
Control/IPM/Exact_L1_Penalty_and_Log_Barrier/: index.html
Control/IPM/Primal_Dual_IPM/: index.html
Control/IPM/Slack_Variables_in_SparseNMPC_IPM/: index.html
Control/IPM/evaluate_merit/: index.html
Control/SafeBuffer/: index.html
Control/SparseNMPC_IPM/: index.html
Control/SparseNMPC_IPM_API/: index.html
Dynamics/API_Reference/: index.html
Dynamics/Overview/: index.html
Dynamics/Technical_Notes/Vehicle_Equations/: index.html
Evaluator/StaticCubicSpline/StaticCubicSpline/: index.html
Evaluator/StaticCubicSpline/StaticCubicSpline_Equations/: index.html
Solver/RiccatiSolver/: index.html
docs/Control/: SafeBuffer.md  SparseNMPC_IPM.md  SparseNMPC_IPM_API.md
docs/Control/IPM/: Exact L1 Penalty와 Log-Barrier.md  Primal-Dual IPM.md  Slack_Variables_in_SparseNMPC_IPM.md  SparseNMPC_IPM에서의 슬랙변수 계산.md  evaluate_merit.md
docs/Evaluator/StaticCubicSpline/: StaticCubicSpline.md  StaticCubicSpline_Equations.md
docs/Solver/: RiccatiSolver.md
include/Optimization/Control/: NMPC_Controller.hpp  README.md  SafeBuffer.hpp  SparseNMPC_IPM.hpp
include/Optimization/Dynamics/: FastMath.hpp  HighFidelityDynamicsModel.hpp  README.md  RealTimeDynamicsModel.hpp  VehicleParams.hpp  VehiclePhysicsCore.hpp
include/Optimization/Estimator/: EKF.hpp  HistoryBuffer.hpp  README.md  SparseMHE.hpp
include/Optimization/Evaluator/: README.md  StaticCubicSpline.hpp
include/Optimization/Matrix/AD/: Dual.hpp  DualMath.hpp  DualScalar.hpp  DualVec.hpp  README.md
include/Optimization/Matrix/Core/: MathTraits.hpp  README.md  StaticMatrix.hpp  StaticMatrixView.hpp
include/Optimization/Matrix/Linalg/: Cholesky.hpp  Core.hpp  LDLT.hpp  LU.hpp  LinearAlgebra.hpp  QR.hpp  README.md
include/Optimization/Simulation/: Integrator.hpp  README.md
include/Optimization/Solver/: FallbackControl.hpp  KKTMonitor.hpp  LevenbergMarquardt.hpp  MeritLineSearch.hpp  README.md  RTQPSolver.hpp  RiccatiSolver.hpp  SolverStatus.hpp
include/Optimization/Utils/: CUDAMacros.hpp  CoordinateConvert.cpp  EnvironmentEvaluator.hpp  README.md
search/: search_index.json
src/: README.md  nmpc_wrapper.cpp
test/: debug_riccati.cpp  test_NMPC.cpp  test_dynamics.cpp  test_estimator.cpp  test_matrix_core.cpp  test_solver.cpp
